--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "[4, 3, 1, 0, 0]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_tours(tours, n) :\n",
     "    affichage_matrice(tours_vers_matrice(tours, n), n)\n",
     "    ligne = \"\"\n",
-    "    for i in range(len(tours.liste)*2+1):\n",
+    "    for i in range(len(tours)*2+1):\n",
     "        ligne += \"=\"\n",
     "    print(ligne)"
    ]
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -323,19 +323,8 @@
       " | | | \n",
       " 3 | | \n",
       " 4 | | \n",
-      " 5 1 2 \n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'liste'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [110], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m tours \u001b[39m=\u001b[39m [[\u001b[39m5\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m3\u001b[39m], [\u001b[39m1\u001b[39m], [\u001b[39m2\u001b[39m]]\n\u001b[0;32m----> 2\u001b[0m affichage_tours(tours, \u001b[39m5\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [108], line 4\u001b[0m, in \u001b[0;36maffichage_tours\u001b[0;34m(tours, n)\u001b[0m\n\u001b[1;32m      2\u001b[0m affichage_matrice(tours_vers_matrice(tours, n), n)\n\u001b[1;32m      3\u001b[0m ligne \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(tours\u001b[39m.\u001b[39;49mliste)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m      5\u001b[0m     ligne \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(ligne)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'liste'"
+      " 5 1 2 \n",
+      "=======\n"
      ]
     }
    ],
@@ -361,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +361,6 @@
     "    else:\n",
     "        resoudre(tours, n_disques-1, n, origine, interm, cible)\n",
     "        deplacer(tours, origine, cible)\n",
-    "        affichage_tours(tours, n)\n",
     "        resoudre(tours, n_disques-1, n, interm, cible, origine)"
    ]
   },
@@ -398,29 +386,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
+     "ename": "NameError",
+     "evalue": "name 'creer_pile' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [95], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m pile \u001b[39m=\u001b[39m Pile()\n\u001b[1;32m      2\u001b[0m pile\u001b[39m.\u001b[39mempiler(creation_tours(\u001b[39m2\u001b[39m))\n\u001b[0;32m----> 3\u001b[0m resoudre(pile, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [93], line 2\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mresoudre\u001b[39m(tours, n_disques, n, origine, cible, interm):\n\u001b[0;32m----> 2\u001b[0m     affichage_tours(tours, n)\n\u001b[1;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m n_disques \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn [77], line 2\u001b[0m, in \u001b[0;36maffichage_tours\u001b[0;34m(tours, n)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39maffichage_tours\u001b[39m(tours, n) :\n\u001b[0;32m----> 2\u001b[0m     affichage_matrice(tours_vers_matrice(tours, n), n)\n\u001b[1;32m      3\u001b[0m     ligne \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(tours\u001b[39m.\u001b[39mliste)\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n",
-      "Cell \u001b[0;32mIn [47], line 7\u001b[0m, in \u001b[0;36mtours_vers_matrice\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m      5\u001b[0m        \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m i:\n\u001b[1;32m      6\u001b[0m               pile\u001b[39m.\u001b[39mempiler(j)\n\u001b[0;32m----> 7\u001b[0m        matrice\u001b[39m.\u001b[39mappend(pile_vers_tableau(pile, n))\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m matrice\n",
-      "Cell \u001b[0;32mIn [17], line 4\u001b[0m, in \u001b[0;36mpile_vers_tableau\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m      2\u001b[0m tableau \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m]\u001b[39m*\u001b[39mn\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste)):\n\u001b[0;32m----> 4\u001b[0m     tableau[i] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mliste[i]\n\u001b[1;32m      5\u001b[0m \u001b[39mreturn\u001b[39;00m tableau\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:121\u001b[0m, in \u001b[0;36mcreation_tours_liste\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreation_tours_liste\u001b[39m(n):\n\u001b[1;32m    118\u001b[0m     \u001b[39m''' renvoie une liste de 3 piles,\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[39m    la première correspond à la pile des n disques,\u001b[39;00m\n\u001b[1;32m    120\u001b[0m \u001b[39m    les autres étant vides.'''\u001b[39;00m\n\u001b[0;32m--> 121\u001b[0m     p0 \u001b[39m=\u001b[39m creer_pile()\n\u001b[1;32m    122\u001b[0m     p1 \u001b[39m=\u001b[39m creer_pile()\n\u001b[1;32m    123\u001b[0m     p2 \u001b[39m=\u001b[39m creer_pile()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'creer_pile' is not defined"
      ]
     }
    ],
    "source": [
-    "pile = Pile()\n",
-    "pile.empiler(creation_tours(2))\n",
-    "resoudre(pile, 2, 2, 0, 2, 1)"
+    "resoudre(creation_tours_liste(2), 2, 2, 0, 2, 1)"
    ]
   },
   {
