--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,19 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'creer_pile' is not defined",
+     "evalue": "name 'empiler' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:121\u001b[0m, in \u001b[0;36mcreation_tours_liste\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreation_tours_liste\u001b[39m(n):\n\u001b[1;32m    118\u001b[0m     \u001b[39m''' renvoie une liste de 3 piles,\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[39m    la première correspond à la pile des n disques,\u001b[39;00m\n\u001b[1;32m    120\u001b[0m \u001b[39m    les autres étant vides.'''\u001b[39;00m\n\u001b[0;32m--> 121\u001b[0m     p0 \u001b[39m=\u001b[39m creer_pile()\n\u001b[1;32m    122\u001b[0m     p1 \u001b[39m=\u001b[39m creer_pile()\n\u001b[1;32m    123\u001b[0m     p2 \u001b[39m=\u001b[39m creer_pile()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'creer_pile' is not defined"
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:124\u001b[0m, in \u001b[0;36mcreation_tours_liste\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    122\u001b[0m p1 \u001b[39m=\u001b[39m creer_pile_liste()\n\u001b[1;32m    123\u001b[0m p2 \u001b[39m=\u001b[39m creer_pile_liste()\n\u001b[0;32m--> 124\u001b[0m mettre_disques_liste(p0, n)\n\u001b[1;32m    125\u001b[0m \u001b[39mreturn\u001b[39;00m [p0, p1, p2]\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:111\u001b[0m, in \u001b[0;36mmettre_disques_liste\u001b[0;34m(pile, n)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[39m'''met des disques de taille n à 1 sur la pile'''\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n, \u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m--> 111\u001b[0m     empiler(pile, n)\n\u001b[1;32m    112\u001b[0m     n \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    113\u001b[0m \u001b[39mreturn\u001b[39;00m pile\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'empiler' is not defined"
      ]
     }
    ],
