--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "[4, 3, 1, 0, 0]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,20 +386,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'empiler' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1 | | \n",
+      " 2 | | \n",
+      "=======\n",
+      " 1 | | \n",
+      " 2 | | \n",
+      "=======\n",
+      " 1 | | \n",
+      " 2 | | \n",
+      "=======\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'est_vide'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:124\u001b[0m, in \u001b[0;36mcreation_tours_liste\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    122\u001b[0m p1 \u001b[39m=\u001b[39m creer_pile_liste()\n\u001b[1;32m    123\u001b[0m p2 \u001b[39m=\u001b[39m creer_pile_liste()\n\u001b[0;32m--> 124\u001b[0m mettre_disques_liste(p0, n)\n\u001b[1;32m    125\u001b[0m \u001b[39mreturn\u001b[39;00m [p0, p1, p2]\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:111\u001b[0m, in \u001b[0;36mmettre_disques_liste\u001b[0;34m(pile, n)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[39m'''met des disques de taille n à 1 sur la pile'''\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n, \u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m--> 111\u001b[0m     empiler(pile, n)\n\u001b[1;32m    112\u001b[0m     n \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    113\u001b[0m \u001b[39mreturn\u001b[39;00m pile\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'empiler' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [27], line 6\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, n, origine, interm, cible)\n\u001b[1;32m      7\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "Cell \u001b[0;32mIn [27], line 7\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, origine, interm, cible)\n\u001b[0;32m----> 7\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:61\u001b[0m, in \u001b[0;36mdeplacer\u001b[0;34m(self, origine, cible)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeplacer\u001b[39m(\u001b[39mself\u001b[39m, origine, cible):\n\u001b[1;32m     57\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[39m    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[39m    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m---> 61\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m[cible]\u001b[39m.\u001b[39;49mest_vide() \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mest_vide():\n\u001b[1;32m     62\u001b[0m         \u001b[39mself\u001b[39m[cible]\u001b[39m.\u001b[39mempiler(\u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mdepiler())\n\u001b[1;32m     63\u001b[0m     \u001b[39melif\u001b[39;00m sommet(\u001b[39mself\u001b[39m[origine]) \u001b[39m<\u001b[39m sommet(\u001b[39mself\u001b[39m[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mest_vide():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'est_vide'"
      ]
     }
    ],
