--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "[4, 3, 1, 0, 0]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[[5, 4, 3, 0, 0], [1, 0, 0, 0, 0], [2, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
     "        return None\n",
     "    else:\n",
     "        resoudre(tours, n_disques-1, n, origine, interm, cible)\n",
-    "        deplacer(tours, origine, cible)\n",
+    "        deplacer_liste(tours, origine, cible)\n",
     "        resoudre(tours, n_disques-1, n, interm, cible, origine)"
    ]
   },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -405,17 +405,18 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'est_vide'",
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [27], line 6\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, n, origine, interm, cible)\n\u001b[1;32m      7\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
-      "Cell \u001b[0;32mIn [27], line 7\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, origine, interm, cible)\n\u001b[0;32m----> 7\u001b[0m     deplacer(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:61\u001b[0m, in \u001b[0;36mdeplacer\u001b[0;34m(self, origine, cible)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeplacer\u001b[39m(\u001b[39mself\u001b[39m, origine, cible):\n\u001b[1;32m     57\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[39m    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[39m    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m---> 61\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m[cible]\u001b[39m.\u001b[39;49mest_vide() \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mest_vide():\n\u001b[1;32m     62\u001b[0m         \u001b[39mself\u001b[39m[cible]\u001b[39m.\u001b[39mempiler(\u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mdepiler())\n\u001b[1;32m     63\u001b[0m     \u001b[39melif\u001b[39;00m sommet(\u001b[39mself\u001b[39m[origine]) \u001b[39m<\u001b[39m sommet(\u001b[39mself\u001b[39m[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m[origine]\u001b[39m.\u001b[39mest_vide():\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'est_vide'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [14], line 6\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, n, origine, interm, cible)\n\u001b[1;32m      7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "Cell \u001b[0;32mIn [14], line 7\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, origine, interm, cible)\n\u001b[0;32m----> 7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:134\u001b[0m, in \u001b[0;36mdeplacer_liste\u001b[0;34m(tours, origine, cible)\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeplacer_liste\u001b[39m(tours, origine, cible):\n\u001b[1;32m    130\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    131\u001b[0m \u001b[39m    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m    132\u001b[0m \u001b[39m    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m    133\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 134\u001b[0m     \u001b[39mif\u001b[39;00m est_vide_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n\u001b[1;32m    135\u001b[0m         empiler_liste(tours[cible], depiler_liste(tours[origine]))\n\u001b[1;32m    136\u001b[0m     \u001b[39melif\u001b[39;00m sommet_liste(tours[origine]) \u001b[39m<\u001b[39m sommet_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:88\u001b[0m, in \u001b[0;36mest_vide_liste\u001b[0;34m(pile)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mest_vide_liste\u001b[39m(pile):\n\u001b[1;32m     87\u001b[0m     \u001b[39m'''Renvoie un booléen, True si la pile est vide et False sinon'''\u001b[39;00m\n\u001b[0;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m p \u001b[39m==\u001b[39m []\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
      ]
     }
    ],
