--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -406,17 +406,17 @@
     },
     {
      "ename": "NameError",
-     "evalue": "name 'p' is not defined",
+     "evalue": "name 'est_vide' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [14], line 6\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, n, origine, interm, cible)\n\u001b[1;32m      7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
-      "Cell \u001b[0;32mIn [14], line 7\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, origine, interm, cible)\n\u001b[0;32m----> 7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:134\u001b[0m, in \u001b[0;36mdeplacer_liste\u001b[0;34m(tours, origine, cible)\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeplacer_liste\u001b[39m(tours, origine, cible):\n\u001b[1;32m    130\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    131\u001b[0m \u001b[39m    déplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m    132\u001b[0m \u001b[39m    Si le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m    133\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 134\u001b[0m     \u001b[39mif\u001b[39;00m est_vide_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n\u001b[1;32m    135\u001b[0m         empiler_liste(tours[cible], depiler_liste(tours[origine]))\n\u001b[1;32m    136\u001b[0m     \u001b[39melif\u001b[39;00m sommet_liste(tours[origine]) \u001b[39m<\u001b[39m sommet_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n",
-      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:88\u001b[0m, in \u001b[0;36mest_vide_liste\u001b[0;34m(pile)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mest_vide_liste\u001b[39m(pile):\n\u001b[1;32m     87\u001b[0m     \u001b[39m'''Renvoie un booléen, True si la pile est vide et False sinon'''\u001b[39;00m\n\u001b[0;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m p \u001b[39m==\u001b[39m []\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resoudre(creation_tours_liste(\u001b[39m2\u001b[39m), \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [6], line 6\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, n, origine, interm, cible)\n\u001b[1;32m      7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "Cell \u001b[0;32mIn [6], line 7\u001b[0m, in \u001b[0;36mresoudre\u001b[0;34m(tours, n_disques, n, origine, cible, interm)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, origine, interm, cible)\n\u001b[0;32m----> 7\u001b[0m     deplacer_liste(tours, origine, cible)\n\u001b[1;32m      8\u001b[0m     resoudre(tours, n_disques\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, n, interm, cible, origine)\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:135\u001b[0m, in \u001b[0;36mdeplacer_liste\u001b[0;34m(tours, origine, cible)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    131\u001b[0m \u001b[39mdéplace la valeur au sommet de la pile d’indice origine vers le sommet de la pile d’indice cible.\u001b[39;00m\n\u001b[1;32m    132\u001b[0m \u001b[39mSi le déplacement n’est pas possible, parce qu’il ne respecte pas les règles du jeu, les piles ne sont pas modifiées.\u001b[39;00m\n\u001b[1;32m    133\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    134\u001b[0m \u001b[39mif\u001b[39;00m est_vide_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n\u001b[0;32m--> 135\u001b[0m     empiler_liste(tours[cible], depiler_liste(tours[origine]))\n\u001b[1;32m    136\u001b[0m \u001b[39melif\u001b[39;00m sommet_liste(tours[origine]) \u001b[39m<\u001b[39m sommet_liste(tours[cible]) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide_liste(tours[origine]):\n\u001b[1;32m    137\u001b[0m     empiler_liste(tours[cible], depiler_liste(tours[origine]))\n",
+      "File \u001b[0;32m/workspace/Classeur_TNSI/docs/notebooks/T1/eval/ds2_debreilly_nathanael.py:96\u001b[0m, in \u001b[0;36mdepiler_liste\u001b[0;34m(pile)\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdepiler_liste\u001b[39m(pile):\n\u001b[1;32m     95\u001b[0m     \u001b[39m'''Renvoie et enlève la valeur du sommet de pile'''\u001b[39;00m\n\u001b[0;32m---> 96\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m est_vide(pile), \u001b[39m\"\u001b[39m\u001b[39mPile vide\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     97\u001b[0m     \u001b[39mreturn\u001b[39;00m pile\u001b[39m.\u001b[39mpop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'est_vide' is not defined"
      ]
     }
    ],
