--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -442,14 +442,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_complexe(matrice, n):\n",
-    "\n",
-    "    \n",
-    "    "
+    "    ligne = \" \"\n",
+    "    for j in range(n-1, -1, -1):\n",
+    "        for i in range(3):\n",
+    "            if matrice[i][j] == 0:\n",
+    "                for k in range(n):\n",
+    "                    ligne += \" \"\n",
+    "                ligne += \"|\"\n",
+    "                for k in range(n):\n",
+    "                    ligne+= \" \"\n",
+    "            else:\n",
+    "                if 2*j+1 == 2*n-1:\n",
+    "                    for k in range(2*j+1):\n",
+    "                        ligne += \"=\"\n",
+    "                else:\n",
+    "                    for k in range(round(((2*n-1)-(2*j+1))/2)):\n",
+    "                        ligne += \" \"\n",
+    "                    for k in range(2*j+1):\n",
+    "                        ligne+= \"=\"\n",
+    "                    for k in range(round(((2*n-1)-(2*j+1))/2)):\n",
+    "                        ligne += \" \"\n",
+    "        print(ligne)\n",
+    "        ligne = \" \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " =========     |          |     \n",
+      "  =======      |          |     \n",
+      "   =====       |          |     \n",
+      "    ===        |          |     \n",
+      "     =         |          |     \n"
+     ]
+    }
+   ],
+   "source": [
+    "affichage_complexe([[5, 4, 3, 2, 1], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]],5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      |          |          |     \n",
+      "      |          |          |     \n",
+      "      |          |          |     \n",
+      "    ===      ===        |     \n",
+      "     =        =        =    \n"
+     ]
+    }
+   ],
+   "source": [
+    "affichage_complexe([[5, 4, 0, 0, 0], [3, 2, 0, 0, 0], [1, 0, 0, 0, 0]],5)"
    ]
   },
   {
