--- a/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
+++ b/docs/notebooks/T1/eval/ds2C-debreilly-nathanael.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,49 +442,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def affichage_complexe(matrice, n):\n",
-    "    ligne = \" \"\n",
+    "    ligne = \"\"\n",
     "    for j in range(n-1, -1, -1):\n",
     "        for i in range(3):\n",
+    "            espace = round((2*n+1 - 2*matrice[i][j]+1)/2)\n",
+    "            for k in range(espace):\n",
+    "                ligne += \" \"\n",
     "            if matrice[i][j] == 0:\n",
-    "                for k in range(n):\n",
-    "                    ligne += \" \"\n",
     "                ligne += \"|\"\n",
-    "                for k in range(n):\n",
-    "                    ligne+= \" \"\n",
     "            else:\n",
-    "                if 2*j+1 == 2*n-1:\n",
-    "                    for k in range(2*j+1):\n",
-    "                        ligne += \"=\"\n",
-    "                else:\n",
-    "                    for k in range(round(((2*n-1)-(2*j+1))/2)):\n",
-    "                        ligne += \" \"\n",
-    "                    for k in range(2*j+1):\n",
-    "                        ligne+= \"=\"\n",
-    "                    for k in range(round(((2*n-1)-(2*j+1))/2)):\n",
-    "                        ligne += \" \"\n",
+    "                for k in range(2*matrice[i][j]+1):\n",
+    "                    ligne += \"=\"\n",
+    "            for k in range(espace):\n",
+    "                ligne += \" \"\n",
     "        print(ligne)\n",
-    "        ligne = \" \""
+    "        ligne = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " =========     |          |     \n",
-      "  =======      |          |     \n",
-      "   =====       |          |     \n",
-      "    ===        |          |     \n",
-      "     =         |          |     \n"
+      "     ===           |            |      \n",
+      "    =====          |            |      \n",
+      "   =======         |            |      \n",
+      "  =========        |            |      \n",
+      " ===========       |            |      \n"
      ]
     }
    ],
@@ -494,18 +487,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      |          |          |     \n",
-      "      |          |          |     \n",
-      "      |          |          |     \n",
-      "    ===      ===        |     \n",
-      "     =        =        =    \n"
+      "      |            |            |      \n",
+      "      |            |            |      \n",
+      "      |            |            |      \n",
+      "  =========      =====          |      \n",
+      " ===========    =======        ===     \n"
      ]
     }
    ],
@@ -517,8 +510,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reprendre les exercices 10 et 11 avec cet affichage...\n",
-    "\n",
+    "Reprendre les exercices 10 et 11 avec cet affichage..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice 10 complexe :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def affichage_tours_complexe(tours, n) :\n",
+    "    affichage_complexe(tours_vers_matrice(tours, n), n)\n",
+    "    ligne = \"\"\n",
+    "    for i in range(n*4):\n",
+    "        ligne += \" -\"\n",
+    "    print(ligne)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      |            |            |      \n",
+      "      |            |            |      \n",
+      "   =======         |            |      \n",
+      "  =========        |            |      \n",
+      " ===========      ===         =====    \n",
+      " - - - - - - - - - - - - - - - - - - - -\n"
+     ]
+    }
+   ],
+   "source": [
+    "tours = [[5, 4, 3], [1], [2]]\n",
+    "affichage_tours_complexe(tours, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice 11 complexe :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resoudre_complexe(tours, n_disques, n, origine, cible, interm):\n",
+    "    if n_disques == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        resoudre_complexe(tours, n_disques-1, n, origine, interm, cible)\n",
+    "        deplacer_liste(tours, origine, cible)\n",
+    "        affichage_tours_complexe(tours, n)\n",
+    "        resoudre_complexe(tours, n_disques-1, n, interm, cible, origine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    |        |        |    \n",
+      "  =====      |        |    \n",
+      " =======     |       ===   \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |        |    \n",
+      "    |        |        |    \n",
+      " =======   =====     ===   \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |        |    \n",
+      "    |       ===       |    \n",
+      " =======   =====      |    \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |        |    \n",
+      "    |       ===       |    \n",
+      "    |      =====   ======= \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |        |    \n",
+      "    |        |        |    \n",
+      "   ===     =====   ======= \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |        |    \n",
+      "    |        |      =====  \n",
+      "   ===       |     ======= \n",
+      " - - - - - - - - - - - -\n",
+      "    |        |       ===   \n",
+      "    |        |      =====  \n",
+      "    |        |     ======= \n",
+      " - - - - - - - - - - - -\n"
+     ]
+    }
+   ],
+   "source": [
+    "resoudre_complexe(creation_tours_liste(3), 3, 3, 0, 2, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercice 13 :\n",
     "\n",
     "Pour améliorer encore l'affichage, rendez le définitivement plus visuel à l'aide du module `ipycanvas`..."
@@ -563,13 +672,6 @@
     "\n",
     "De même, essayez de choisir des variables dont le nom est compréhensible, si c’est pertinent."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
