--- a/docs/notebooks/T2/Fractal Tree/Fractals_trees_avec_ipycanvas.ipynb
+++ b/docs/notebooks/T2/Fractal Tree/Fractals_trees_avec_ipycanvas.ipynb
@@ -157,12 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Définitions\n",
-    "\n",
+    "'''\n",
+    "Créer un Canvas de 800x600 de couleur noir.\n",
+    "'''\n",
     "# Création du canvas c\n",
     "c = Canvas(width=800, height=600)\n",
     "\n",
@@ -181,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d5ab36f07441bd857a11a15ef969ea",
+       "model_id": "25c4ac5a896543eaaf77d28a3a46a66b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d5ab36f07441bd857a11a15ef969ea",
+       "model_id": "25c4ac5a896543eaaf77d28a3a46a66b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,17 +234,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccc7279adfe44d39b4fda540033c1cae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=600, width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccc7279adfe44d39b4fda540033c1cae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=600, width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Dépendances\n",
-    "from ...\n",
+    "from fractal_tree import *\n",
     "\n",
     "# Définitions\n",
     "\n",
     "# Création du canvas c\n",
-    "c = ...\n",
+    "c = Canvas(width=800, height=600)\n",
     "\n",
     "# Une fonction pour effacer la scène et redessiner un background\n",
     "def background(couleur : str = 'black') :\n",
@@ -252,8 +283,10 @@
     "    Préconditions :\n",
     "    - couleur (str) : une chaine de caractères définissant une couleur HTML valide\n",
     "    '''    \n",
-    "    # A compléter...\n",
-    "\n",
+    "    c.clear()\n",
+    "    c.fill_style = couleur\n",
+    "    c.fill_rect(0, 0, 800, 600)\n",
+    "    display(c)\n",
     "\n",
     "# Tests\n",
     "if __name__ == '__main__':\n",
@@ -278,35 +311,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method translate in module ipycanvas.canvas:\n",
+      "\n",
+      "translate(x, y) method of ipycanvas.canvas.Canvas instance\n",
+      "    Move the canvas and its origin on the grid.\n",
+      "    \n",
+      "    ``x`` indicates the horizontal distance to move,\n",
+      "    and ``y`` indicates how far to move the grid vertically.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "help(...)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- effectuer un changement d'origine au milieu de la base du canvas ;\n",
-    "- à partir de cette origine, dessiner un tronc vertical, rouge, d'épaisseur 3 pixels et de hauteur 150 pixels."
+    "help(c.translate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Changement d'origine au milieu de la base du canvas\n",
+    "c = Canvas(width=800, height=600)\n",
     "\n",
+    "# Changement d'origine au milieu de la base du canvas\n",
+    "c.translate(400, 300)\n",
     "\n",
     "# réglage de l'épaisseur et de la couleur du trait\n",
+    "c.line_width = 3\n",
+    "c.line_style = \"red\"\n",
     "\n",
-    "\n",
-    "\n",
-    "# trait du tronc\n"
+    "# trait du tronc\n",
+    "c.begin_path()\n",
+    "c.line_to(0, 150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be72a843ffd14955a9e7002d34de1c5c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=600, width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(c)"
    ]
   },
   {
@@ -662,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
