--- a/docs/notebooks/Autre/test.ipynb
+++ b/docs/notebooks/Autre/test.ipynb
@@ -19,7 +19,7 @@
     "- Comme pour Python écrire le texte entre \"**guillemets**\"\n",
     "\n",
     "\n",
-    "## 2- Créer une table :\n",
+    "## 2- **Créer** une table :\n",
     "\n",
     "### • Fonctionnement :\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "##### Ainsi une table nommée *ma_table* est crée prenant pour paramètres **x**, **y**, **z**, ...\n",
     "\n",
-    "- Exemple de rendu :\n",
+    "### • Exemple de rendu :\n",
     "\n",
     "|*ma_table*|*0 rows*|\n",
     "|----------|--------|\n",
@@ -45,10 +45,10 @@
     "\n",
     "### • Commande :\n",
     "\n",
-    "- \"CREATE TABLE test(...)\"\n",
+    "- \"CREATE TABLE table(...);\"\n",
     "\n",
     "\n",
-    "## 3- Insérer des données dans ma table :\n",
+    "## 3- **Insérer** des données dans ma table :\n",
     "\n",
     "### • Fonctionnement :\n",
     "\n",
@@ -58,34 +58,101 @@
     "\n",
     "    **\"*test*\"** (valeur attribuée à y),\n",
     "\n",
-    "    **17** (valeur attribuée à z),\n",
+    "    **18** (valeur attribuée à z),\n",
     "    \n",
     "    ...)**;**\n",
     "\n",
-    "##### Les valeurs 1, test, 17, ... sont ajoutées à la table *ma_table*, chaque valeur est liée à un paramètre : 1 avec x, test avec y etc.\n",
+    "##### Les valeurs 1, test, 18, ... sont ajoutées à la table *ma_table*, chaque valeur est liée à un paramètre : 1 avec x, test avec y etc.\n",
     "\n",
-    "- Exemple de rendu :\n",
+    "### • Exemple de rendu (*si SELECT utilisé*) :\n",
     "\n",
     "|*X*|*Y*|*Z*|\n",
     "|---|---|---|\n",
-    "| 1 | test | 17  |\n",
-    "| 2 | ... | ... |\n",
+    "| 1 | test | 18 |\n",
+    "| 2 | toto | 22 |\n",
+    "| 3 | titi | 12 |\n",
+    "| 4 | tutu | 18 |\n",
+    "| 5 | ... | ... |\n",
     "\n",
     "### • Commande :\n",
     "\n",
-    "- \"INSERT INTO test(...)\"\n",
+    "- \"INSERT INTO table(...);\"\n",
     "\n",
-    "## 4 - Interroger les données de ma table :\n",
+    "## 4 - **Interroger** les données de ma table :\n",
     "\n",
     "### • Fonctionnement :\n",
     "\n",
-    "- SELECT **x** FROM *ma_liste*\n",
+    "- SELECT **x** FROM *ma_table*;\n",
     "\n",
-    "##### Les valeurs correspondants à **x** seront affichées, x peut être remplacé par :\n",
-    "- \"*\" : affiche tout les éléments de *ma_liste*\n",
+    "##### Les valeurs correspondants à **x** de *ma_table* seront affichées, x peut être remplacé par :\n",
+    "- \"*\" : affiche tout les éléments de *ma_table*\n",
     "- \"Y\" : affiche une colonne en particulier (ou plusieurs avec \",\")\n",
     "\n",
-    "##### Il existe également "
+    "##### Il existe également la commande \"**WHERE**\" qui permet d'ajouter une condition à ce qui est affiché :\n",
+    "- SELECT **x** FROM *ma_table* WHERE **y**\n",
+    "\n",
+    "##### **y** peut être remplacé par diverses conditions qui peuvent être acumulées avec **AND** :\n",
+    "- \"z **>=**/**<=**/**=** *10*\" : affiche tout les éléments dont le z est supérieur/inférieur/égal à *10* (\"**=**\" fonctionne également avec le texte)\n",
+    "- \"y **IN** (\"test\", \"testt\", ...) : affiche tout les éléments dont y contient \"test\" ou \"testt\"\n",
+    "\n",
+    "#### Enfin on peut ajouter une dernière commande à SELECT, \"**ORDER BY** *z*\" ou z peut être remplacer par la façon dont la liste sera rangée :\n",
+    "- \"x\" : la liste sera rangée par ordre croissant de la colonne x (on peut également ajouter **ASC** \\ DESC)\n",
+    "- \"x\" **DESC** : la liste sera rangée par ordre décroissant de la colonne x\n",
+    "\n",
+    "### • Exemples d'utilisations des ces commandes :\n",
+    "\n",
+    "SELECT *Y*, *Z* FROM *ma_table*;\n",
+    "|*Y*|*Z*|\n",
+    "|---|---|\n",
+    "| test | 18 |\n",
+    "| toto | 22 |\n",
+    "| titi | 12 |\n",
+    "| tutu | 18 |\n",
+    "| ... | ... |\n",
+    "\n",
+    "SELECT * FROM *ma_table* ORDER BY Z DESC;\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 2 | toto | 22 |\n",
+    "| 4 | tutu | 18 |\n",
+    "| 1 | test | 18 |\n",
+    "| 3 | titi | 12 |\n",
+    "| 5 | ... | ... |\n",
+    "\n",
+    "SELECT * FROM *ma_table* WHERE Z < 20 AND Z > 15 ORDER BY Z;\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 1 | test | 18 |\n",
+    "| 4 | tutu | 18 |\n",
+    "| 5 | ... | ... |\n",
+    "\n",
+    "### • Commande :\n",
+    "\n",
+    "- SELECT *élément(s)* WHERE *condition* ORDER BY *ordre*\n",
+    "\n",
+    "## 5 - **Agréger** les données d'une table :\n",
+    "\n",
+    "### • Fonctionnement :\n",
+    "\n",
+    "- SELECT **x** FROM *ma_table*\n",
+    "\n",
+    "##### Les valeurs **x** de *ma_table* seront affichées, x peut être remplacé par :\n",
+    "- MAX(*colonne*) : affiche le maximum d'une colonne\n",
+    "- AVG(*colonne*) : affiche la moyenne d'une colonne\n",
+    "- SUM(*colonne*) : affiche le total d'une colonne\n",
+    "\n",
+    "##### On peut également ajouter la commande **AS** pour identifier ce nouvel élément dans une nouvelle table :\n",
+    "- SELECT **x** AS **test** FROM *ma_table*\n",
+    "\n",
+    "##### Il est également possible de coupler cette fonction à la commande **WHERE** avec **COUNT** :\n",
+    "- SELECT COUNT(*colonne*) FROM *ma_table* WHERE *condition* : compte le nombre d'élément présent dans une colonne respectant la condition\n",
+    "- SELECT COUNT(**DISTINCT** *colonne*) FROM *ma_table* WHERE *condition* : compte le nombre d'élément différent dans une colonne respectant la condition\n",
+    "\n",
+    "##### Enfin, la commande **GROUP BY** permet de regrouper les valeurs :\n",
+    "SELECT **x**, **COUNT(*)** FROM *ma_table* GROUP BY **z**\n",
+    "\n",
+    "### • Exemples d'utilisations des ces commandes :\n",
+    "\n"
    ]
   }
  ],
