--- a/docs/notebooks/Autre/test.ipynb
+++ b/docs/notebooks/Autre/test.ipynb
@@ -152,7 +152,18 @@
     "SELECT **x**, **COUNT(*)** FROM *ma_table* GROUP BY **z**\n",
     "\n",
     "### • Exemples d'utilisations des ces commandes :\n",
-    "\n"
+    "\n",
+    "SELECT Y, MAX(Z) AS maximum_z FROM *ma_table*;\n",
+    "| *Y*  |*maximum_z*|\n",
+    "|------|-----------|\n",
+    "| toto |    22     |\n",
+    "\n",
+    "SELECT COUNT(*) FROM *ma_table* GROUP BY Z;\n",
+    "| *Z* | COUNT(*) |\n",
+    "|-----|----------|\n",
+    "| 22  |    1     |\n",
+    "| 18  |    2     |\n",
+    "| 12  |    1     |"
    ]
   }
  ],
